@@ -66,6 +66,7 @@ Bug fixes
  * Disabled use of escape key to revert content of rich text fields, which could cause accidental data loss (Matt Westcott)
  * Setting ``USE_THOUSAND_SEPARATOR = True`` no longer breaks the rendering of numbers in JS code for InlinePanel (Mattias Loverot, Matt Westcott)
  * Images / documents pagination now preserves GET parameters (Bojan Mihelac)
+ * Wagtail's UserProfile model now sets a related_name of ``wagtail_userprofile`` to avoid naming collisions with other user profile models (Matt Westcott)
 
 
 Upgrade considerations
